More Uruguayan content

--- a/localisation/replace/EUYL_events_l_spanish.yml
+++ b/localisation/replace/EUYL_events_l_spanish.yml
@@ -3538,9 +3538,14 @@
  uruguay.16.d:0 "Los brasileños han respondido a nuestros diplomáticos diciendo que no aceptarán estas ofertas de paz y que prefieren dividir a la Argentina de la manera en que lo hemos hecho ahora"
  uruguay.16.a:0 "Maldito seas Brasil..."
  uruguay.17.t:0 "¿Quién debe dirigir nuestra nación?"
- uruguay.17.d:0 "Con la guerra civil en pleno apogeo y nuestra nación sumida en el caos, se plantea una pregunta por encima de cualquier otra, ¿quién debe liderar el país? \n\nEl encarcelamiento de Terra ha provocado que el nuevo estado que se ha creado esté cerca de la anarquía, y necesitamos un líder fuerte lo antes posible. Debido a su encarcelamiento, los ideales democráticos y comunistas se extienden a todo el pueblo uruguayo que está en contra de Terra. \n\nEsta puede ser la última vez que el pueblo decida quién dirigirá la nación, así que tenemos que tomar la decisión correcta y rápida. Después de una elección apresurada, el ganador es..."
- uruguay.17.a:0 "Luis Alberto de Herrera"
- uruguay.17.b:0 "Eugenio Gómez"
+ uruguay.17.d:0 "Con la guerra civil en pleno apogeo y nuestra nación sumida en el caos, se plantea una pregunta por encima de cualquier otra, ¿quién debe liderar el país? \n\nEl encarcelamiento de Terra ha provocado que el nuevo estado que se ha creado esté cerca de la anarquía, y necesitamos un líder fuerte lo antes posible. Debido a su encarcelamiento, los ideales democráticos y comunistas se extienden a todo el pueblo uruguayo que está en contra de Terra. \n\nEsta puede ser la última vez que el pueblo decida quién dirigirá la nación, así que tenemos que tomar la decisión correcta y rápida."
+ uruguay.17.a:0 "Basilio Muñoz seguira dirigiendo por ahora."
+ uruguay.17.b:0 "Eugenio Gómez dirigira por los trabajadores."
+ uruguay.18.t:0 "[GetYear] Elections"
+ uruguay.18.d:0 "A pesar de la situación que llevó a los partidos a formar la coalición, la presión de todos los sectores democráticos del país venía sumandose sobre [URG.GetLeader], exigiendo el regreso de elecciones libres, con algunos radicales incluso afirmando que [URG.GetLeader] está buscando mantener el poder para sí mismo y, cediendo a la presión, [URG.GetLeader] había programado elecciones para [GetYear]. \n\nAunque la situación en el país es todo menos estable, parece que [URG.GetLeader] ha cumplido su promesa y, hoy, los votantes tuvieron que decidir entre votar por Emilio Frugoni, Luis Batlle Berres o Luis Alberto de Herrera. Mientras que Frugoni y Batlle gozan de relativa popularidad entre la población, Luis Alberto de Herrera es visto por la mayoría de los liberales y socialistas como un traidor al país, siendo solo defendido por aquellos que apoyaron a Terra. Sin embargo, todos los candidatos disfrutan de una buena base de votantes, lo que les brinda la oportunidad de ganar esta importante elección. \n\nEn [GetDateText], mientras se cuentan los votos, es obvio que ..."
+ uruguay.18.a:0 "Luis Batlle Berres gano las elecciones!"
+ uruguay.18.b:0 "Emilio Frugoni gano las elecciones!"
+ uruguay.18.c:0 "Luis Alberto de Herrera gano las elecciones!"
 # === [LocEditor:OrphanedKeys] Keys that do not exist in English ===
  usa.24.title:0 "El ocaso rojo"
  news.317.c:0 "Esto desbarata nuestros planes..."
