--- a/localisation/replace/EUYL_parties_l_spanish.yml
+++ b/localisation/replace/EUYL_parties_l_spanish.yml
@@ -425,6 +425,14 @@
  URG_democratic_party_party_long:0 "Partido Nacional"
  URG_communism_party:0 "PCU"
  URG_communism_party_party_long:0 "Partido Comunista del Uruguay"
+ URG_partido_colorado:0 "Colorado"
+ URG_partido_colorado_long:0 "Partido Colorado"
+ URG_partido_socialista:0 "PSU"
+ URG_partido_socialista_long:0 "Partido Socialista del Uruguay"
+ URG_anti_terristas:0 "Anti-Terristas"
+ URG_anti_terristas_long:0 "Coalición Anti-Terrista"
+ URG_partido_nacional:0 "PN"
+ URG_partido_nacional_long:0 "Partido Nacional"  
  VEN_fascism_party:0 "Consejo de Ministros"
  VEN_fascism_party_long:0 "Consejo de Ministros"
  VEN_neutrality_party:0 "AD"
