--- a/localisation/replace/EUYL_tooltips_l_english.yml
+++ b/localisation/replace/EUYL_tooltips_l_english.yml
@@ -5,3 +5,5 @@
   URG_san_miguel_renovated:0 "The Fortaleza de San Miguel has been renovated"
   URG_santa_teresa_renovated:0 "The Fortaleza de Santa Teresa has been renovated"
   URG_horacio_arredondo_tt:0 "Hiring Arredondo will allow the renovation of old colonial forts"  
+  URG_communist_coalition:0 "A coalition with the communists has been achieved"
+  URG_work_with_the_PCU_tt:0 "Having a coalition with the communists will §Yallow the hiring of communist advisors§!"
