--- a/localisation/replace/EUYL_tooltips_l_spanish.yml
+++ b/localisation/replace/EUYL_tooltips_l_spanish.yml
@@ -4,4 +4,5 @@
   URG_cerro_renovated:0 "La Fortaleza del Cerro ha sido renovada"
   URG_san_miguel_renovated:0 "La Fortaleza de San Miguel ha sido renovada"
   URG_santa_teresa_renovated:0 "La Fortaleza de Santa Teresa ha sido renovada" 
-  URG_horacio_arredondo_tt:0 "Contratar a Arredondo permitira la renovación de viejos fuertes coloniales"      
+  URG_horacio_arredondo_tt:0 "Contratar a Arredondo permitira la renovación de viejos fuertes coloniales"
+  URG_communist_coalition:0 "Se ha logrado una coalición con los comunistas"      
