--- a/localisation/replace/EUYL_events_l_english.yml
+++ b/localisation/replace/EUYL_events_l_english.yml
@@ -4606,3 +4606,13 @@
  venezuela.1.d:0 "Following the death of general and president Juan Vicente Gómez, a interim government had been organized under Eleazar López Contreras while elections were being planned. Today, indirect elections are being held in the congress of Venezuela, where senators and deputies are gathering to vote on the new president of the United States of Venezuela. \n\nThe main candidates are Eleazar López Contreras, a military officer from Queniquea, who had served as Minister of War and Navy under Gómez since 1931 and as the provisional president since 1935, being somewhat of a moderate amongst the followers of the late Gómez. \nThe other candidate being Nestor Luis Pérez, an democratic activist opposed to the Gómez's government who spent time in prison as political prisoner under Gomez's regime. \nWith the voting session drawing to a close and the votes being counted, the senate congratulates the new president:"
  venezuela.1.a:0 "Eleazar López Contreras"
  venezuela.1.b:0 "Néstor Luis Pérez" 
+
+ ### Cuba ###
+
+ cuba.1.t:0 "1936 General Election"
+ cuba.1.d:0 "Following the sudden resignation of former president Carlos Mendieta, Jose Agripino Barnet was appointed as interim president last december. A diplomat who served under Mendieta as Secretary of State, he hardly had support among the main circles of the opposition and much less among the people, who saw how presidents succeed one another and the so-called revolution of 1933 did not specify its objectives. In order to bring stability to the chaotic nation, he called for elections, which are celebrated today. \n\nThe main contenders for president are Miguel Mariano Gómez, mayor of Havana and member of the Partido Liberal de Cuba and Mario García Menocal, president of Cuba during WW1. \n\nWhile these elections are mostly free from meddling, both candidates are wary of general Fulgencio Batista, who had considerable influence on the recent presidencies, including the presidency of Bernet. \n\nAfter counting the votes, the electoral court announces that..."
+ cuba.1.a:0 "...Miguel Mariano Gómez has won!"
+ cuba.1.b:0 "...Mario García Menocal has won!"
+ cuba.2.t:0 "Bomb Attack!"
+ cuba.2.d:0 "Today, on the anniversary of the Morrillo events, a bomb attack has occurred, of which Cuba Joven claims responsibility for. This attack targeted general and admiral Carmelo González Arias, who got died of his injuries caused by a package containing a bomb, sent by Luis María Buch."
+ cuba.2.a:0 "This is a disaster!"
