--- a/localisation/replace/EUYL_focus_l_english.yml
+++ b/localisation/replace/EUYL_focus_l_english.yml
@@ -5983,3 +5983,52 @@
  BRA_steel_for_the_army_desc:0 "Steel is very valuable since it is a necessary material for many different military equipments. Now that we have such a plentiful amount of steel, we can produce these various equipments more efficiently."
  BRA_expand_our_petroleum_industry:0 "Expand our Petroleum Industry"
  BRA_expand_our_petroleum_industry_desc:0 "Our lands are filled with petroleum and oil, and extracting it would allow us to sell it to others, or use it for our own needs. Either way this will massively help us, and we should take advantage of it as soon as possible."
+
+ CUB_reform_the_cuban_forces:0 "Reform the Cuban Armed Forces"
+ CUB_ejercito_constitucional_de_cuba:0 "El Ejército Constitucional de Cuba"
+ CUB_purchase_old_rifles:0 "Purchase Old Rifles"
+ CUB_purchase_howitzers:0 "Purchase Howitzers"
+ CUB_modernize_our_equipment:0 "Modernize our Equipment"
+ CUB_motorize_the_army:0 "Motorize the Army"
+ CUB_expand_support_companies:0 "Expand Support Companies"
+ CUB_create_the_armoured_corps:0 "Create the Armoured Corps"
+ CUB_the_cuban_special_forces:0 "The Cuban Special Forces"
+ CUB_a_modern_army:0 "A Modern Army"
+ CUB_la_marina_de_guerra_cubana:0 "La Marina de Guerra Cubana"
+ CUB_expand_the_havana_dockyards:0 "Expand the Havana Dockyards"
+ CUB_modernize_our_cruisers:0 "Modernize our Cruisers"
+ CUB_research_better_screens:0 "Research Better Screen Ships"
+ CUB_create_the_submarine_fleet:0 "Create a Submarine Fleet"
+ CUB_create_a_naval_industry:0 "Create a Naval Industry"
+ CUB_purchase_a_heavy_ship:0 "Purchase a Heavy Ship"
+ CUB_create_the_fuerza_aerea_cubana:0 "Create the Fuerza Aérea Cubana"
+ CUB_purchase_new_aircraft:0 "Purchase New Aircraft"
+ CUB_protect_the_skies:0 "Protect the Skies"
+ CUB_bombard_our_enemies:0 "Bombard our Enemies"
+ CUB_establish_our_doctrine:0 "Establish our Doctrines"
+ CUB_heavy_fighter_effort:0 "Heavy Fighter Effort"
+ CUB_naval_bomber_effort:0 "Naval Bomber Effort"
+ CUB_dive_bomber_effort:0 "Dive Bomber Effort"
+ CUB_strategic_bomber_effort:0 "Strategic Bomber Effort"
+ CUB_create_an_aviation_school:0 "Create an Aviation School"
+ CUB_rocket_effort:0 "Rocket Effort"
+ CUB_new_air_bases:0 "Expand the Havana Airbase"
+ CUB_aircraft_innovations:0 "Aircraft Innovations"
+ CUB_industrial_reforms:0 "Begin Industrial Reforms"
+ CUB_expand_the_union_de_industria_militar:0 "Create the Union de Industria Militar"
+ CUB_expand_the_civilian_industry:0 "Expand our Civilian Industries"
+ CUB_nine_cent_law:0 "Nine Cent Law"
+ CUB_expand_sugar_plantations:0 "Expand the Sugar Plantations"
+ CUB_create_the_autopista_nacional:0 "Create the Autopista Nacional"
+ CUB_modernize_the_ferrocarriles_consolidados_de_cuba:0 "Modernize the Ferrocarriles Consolidados de Cuba"
+ CUB_exploit_rare_resouces:0 "Exploit Rare Resources"
+ CUB_expand_tourism_industry:0 "Expand the Tourism Industry"
+ CUB_increased_sugar_exports:0 "Increase our Sugar Exports"
+ CUB_further_expansions_to_the_UIM:0 "Expand the Union de Industria Militar"
+ CUB_stabilize_the_currency:0 "Stabilize our Currency"
+ CUB_land_reforms:0 "Begin Land Reforms"
+ CUB_ally_the_plantation_owners:0 "Ally the Plantation Owners"
+ CUB_expand_worker_rights:0 "Expand Workers' Rights"
+ CUB_end_reliance_on_sugar:0 "End the Reliance on Sugar"
+ CUB_suppress_striking_workers:0 "Suppress the Striking Workers"
+ CUB_the_sugar_empire:0 "The Sugar Empire"
