--- a/localisation/replace/EUYL_parties_l_spanish.yml
+++ b/localisation/replace/EUYL_parties_l_spanish.yml
@@ -425,6 +425,12 @@
  GNC_democratic_party_long:0 "Confraternidad Guanacasteca"
  ELS_fascism_party:0 "Pro-Patria"
  ELS_fascism_party_long:0 "Partido Nacional 'Pro-Patria'"
+ ELS_democratic_party:0 "PL"
+ ELS_democratic_party_long:0 "Partido Laborista"
+ ELS_communism_party:0 "PCS"
+ ELS_communism_party_long:0 "Partido Comunista Salvadoreño"
+ ELS_neutrality_party:0 "PRUD"
+ ELS_neutrality_party_long:0 "Partido Revolucionario de Unificación Democrática"
  GUA_democratic_party:0 "FUPA"
  GUA_democratic_party_long:0 "Frente Unido de Partidos Arevalistas"
  GUA_communism_party:0 "PCCA"
@@ -543,10 +549,16 @@
  TAN_communism_party_long:0 "Partido Comunista de la URSS"
  PAR_communism_party:0 "PRF"
  PAR_communism_party_long:0 "Partido Revolucionario Febrerista"
- CUB_democratic_party:0 "Unión"
- CUB_democratic_party_long:0 "Unión Nacional"
+ CUB_democratic_party:0 "PLC"
+ CUB_democratic_party_long:0 "Partido Liberal de Cuba"
+ CUB_democratic_conservative_party:0 "AND"
+ CUB_democratic_conservative_party_long:0 "Asociación Nacional Democrática" 
  CUB_communism_party:0 "PCC"
  CUB_communism_party_long:0 "Partido Comunista Cubano"
+ CUB_fascism_party:0 "Falange"
+ CUB_fascism_party_long:0 "Falange Cubana"
+ CUB_neutrality_party:0 "CSD"
+ CUB_neutrality_party_long:0 "Coalición Socialista Democrática"
  DOM_fascism_party:0 "PD"
  DOM_fascism_party_long:0 "Partido Dominicano"
  HAI_neutrality_party:0 "Garde d'Haiti"
@@ -791,6 +803,10 @@
  BOL_falange_long:0 "Falange Socialista Boliviana"
  social_democracy:0 "Democracia Social"
  social_democracy_desc:0 "La democracia social es una sociedad donde el poder reside en el Congreso de la Nación, donde están diputados y senadores. No tanto en el presidente o el ejecutivo; es una sociedad dónde el pueblo, los mayores de 21 años (o 18 en algunos lugares), son ciudadanos y no habitantes, gozando a tal efecto de unos derechos que les permitan vivir con dignidad, garantizado por el Estado Nación."
+ BLZ_neutrality_party:0 "Gobernación"
+ BLZ_neutrality_party_long:0 "Gobernación de Honduras Britanica"
+ BLZ_democratic_party:0 "MN"
+ BLZ_democratic_party_long:0 "Movimiento Nacionalista"
 
 # === [LocEditor:OrphanedKeys] Keys that do not exist in English ===
  transylvania_fascism_party:0 "PD"
