--- a/localisation/replace/EUYL_strategic_region_names_l_spanish.yml
+++ b/localisation/replace/EUYL_strategic_region_names_l_spanish.yml
@@ -212,3 +212,4 @@
  STRATEGICREGION_230:0 "Las Pampas"
  STRATEGICREGION_229:0 "Uruguay"
  STRATEGICREGION_231:0 "La Española"
+ STRATEGICREGION_232:0 "Cuba" 
