--- a/localisation/replace/EUYL_traits_l_english.yml
+++ b/localisation/replace/EUYL_traits_l_english.yml
@@ -59,6 +59,19 @@
  URG_anarcho_batllist:0 "Anarcho-Batllist"
  HON_strongman_of_tegucigalpa:0 "Strongman of Tegucigalpa"
  anti_socialist_bishop:0 "Anti-Socialist Bishop"
+ ELS_theosophic_dictator:0 "Theosophic Dictator"
+ ELS_democratic_symphaties:0 "Democratic Sympathies"
+ CUB_puppeteer_of_havana:0 "Puppeteer of Havana"
+ CUB_batista_advisor_locked_tt:0 "§YThis advisor has too much influence and cannot be manually dimissed§!"
+ CUB_puppet_of_batista:0 "Puppet of Batista"
+ CUB_anti_corruption_agent:0 "Anti-Corruption Agent"
+ CUB_corrupt_kleptocrat:0 "Corrupt Kleptocrat"
+ generic_philosopher:0 "Philosopher"
+ generic_writer:0 "Writer"
+ generic_judge:0 "Judge"
+ generic_lawyer:0 "Lawyer"
+ generic_physician:0 "Physician"
+ generic_army_connections:0 "Army Connections"
  
  cc_leader:0 "General"
  fm_leader:0 "Field Marshal"
