--- a/localisation/replace/EUYL_traits_l_spanish.yml
+++ b/localisation/replace/EUYL_traits_l_spanish.yml
@@ -59,6 +59,19 @@
  URG_anarcho_batllist:0 "Anarco-Batllista"
  HON_strongman_of_tegucigalpa:0 "Hombre fuerte de Tegucigalpa"
  anti_socialist_bishop:0 "Obispo Anti-Socialista"
+ ELS_theosophic_dictator:0 "Dictador Teosófico"
+ ELS_democratic_symphaties:0 "Simpatías Democraticas"
+ CUB_puppeteer_of_havana:0 "Titiritero de La Havana"
+ CUB_batista_advisor_locked_tt:0 "§YEste politico tiene mucha influencia por lo que no puede ser removido manualmente§!" 
+ CUB_puppet_of_batista:0 "Titere de Batista"
+ CUB_anti_corruption_agent:0 "Agente Anticorrupción"
+ CUB_corrupt_kleptocrat:0 "Cleptócrata Corrupto "
+ generic_philosopher:0 "Filósofo"
+ generic_writer:0 "Escritor"
+ generic_judge:0 "Juez"
+ generic_lawyer:0 "Abogado"
+ generic_physician:0 "Medico"
+ generic_army_connections:0 "Conexiones en el ejército" 
 
  cc_leader:0 "General"
  fm_leader:0 "Mariscal de campo"
