--- a/localisation/replace/EUYL_ideas_l_spanish.yml
+++ b/localisation/replace/EUYL_ideas_l_spanish.yml
@@ -3451,3 +3451,7 @@
  BRA_scars_of_the_1930_revolution:0 "Cicatrices de la revolución de 1930"
  BRA_scars_of_the_1930_revolution_desc:0 "La Revolución de 1930 está todavía en la memoria muy reciente de la mayoría de los brasileños. La sangre y el caos político que surgió de ella no se olvidarán tan rápido y nuestro pueblo sigue cansado de que ocurra algo similar."
  BRA_economic_boost:0 "Impulso económico"
+
+ ### El Salvador ###
+
+ ELS_legacy_of_the_1932_massacre:0 "Legado de la Masacre de 1932"
