--- a/localisation/replace/EUYL_parties_l_english.yml
+++ b/localisation/replace/EUYL_parties_l_english.yml
@@ -415,6 +415,12 @@
  GNC_democratic_party_long:0 "Confraternidad Guanacasteca"
  ELS_fascism_party:0 "Pro-Patria"
  ELS_fascism_party_long:0 "Partido Nacional 'Pro-Patria'"
+ ELS_democratic_party:0 "PL"
+ ELS_democratic_party_long:0 "Partido Laborista"
+ ELS_communism_party:0 "PCS"
+ ELS_communism_party_long:0 "Partido Comunista Salvadoreño"
+ ELS_neutrality_party:0 "PRUD"
+ ELS_neutrality_party_long:0 "Partido Revolucionario de Unificación Democrática"
  GUA_democratic_party:0 "FUPA"
  GUA_democratic_party_long:0 "Frente Unido de Partidos Arevalistas"
  GUA_communism_party:0 "PCCA"
@@ -531,10 +537,16 @@
  TAN_communism_party_long:0 "Communist Party of the Soviet Union"
  PAR_communism_party:0 "PRF"
  PAR_communism_party_long:0 "Partido Revolucionario Febrerista"
- CUB_democratic_party:0 "Union"
- CUB_democratic_party_long:0 "National Union"
+ CUB_democratic_party:0 "PLC"
+ CUB_democratic_party_long:0 "Partido Liberal de Cuba"
+ CUB_democratic_conservative_party:0 "AND"
+ CUB_democratic_conservative_party_long:0 "Asociación Nacional Democrática"
  CUB_communism_party:0 "PCC"
  CUB_communism_party_long:0 "Partido Comunista Cubano"
+ CUB_fascism_party:0 "Falange"
+ CUB_fascism_party_long:0 "Falange Cubana"
+ CUB_neutrality_party:0 "CSD"
+ CUB_neutrality_party_long:0 "Coalición Socialista Democrática"
  DOM_fascism_party:0 "PD"
  DOM_fascism_party_long:0 "Partido Dominicano"
  HAI_neutrality_party:0 "Garde d'Haiti"
@@ -785,7 +797,10 @@
  BOL_central_government:0 "CG"
  BOL_falange:0 "BSF"
  BOL_falange_long:0 "Bolivian Socialist Falange"
-
+ BLZ_neutrality_party:0 "Governorship"
+ BLZ_neutrality_party_long:0 "Governorship of British Honduras"
+ BLZ_democratic_party:0 "NM"
+ BLZ_democratic_party_long:0 "Nationalist Movement"
 
  peronism:0 "Justicialismo"
  peronism_desc:0 "Justicialismo"
