--- a/localisation/replace/EUYL_state_names_l_spanish.yml
+++ b/localisation/replace/EUYL_state_names_l_spanish.yml
@@ -309,11 +309,11 @@
  STATE_308:0 "Antillas Menores"
  STATE_309:0 "Surinam"
  STATE_310:0 "Guyana Francesa"
- STATE_311:1 "Honduras Británica"
+ STATE_311:0 "Sur de Belice"
  STATE_312:0 "Tegucigalpa"
  STATE_313:0 "Guatemala"
  STATE_314:0 "San Salvador"
- STATE_315:0 "Cuba"
+ STATE_315:0 "La Havana"
  STATE_316:0 "San José"
  STATE_317:0 "Managua"
  STATE_318:0 "Port-au-Prince"
@@ -912,3 +912,11 @@
  STATE_939:0 "San Juan"
  STATE_940:0 "Santiago"
  STATE_941:0 "La Vega"
+ STATE_942:0 "Norte de Belice"
+ STATE_943:0 "Pinar del Rio"
+ STATE_944:0 "Isla de Pinos"
+ STATE_945:0 "Las Villas"
+ STATE_946:0 "Camagüey"
+ STATE_947:0 "Holguin"
+ STATE_948:0 "Santiago de Cuba"
+ STATE_949:0 "Bahía de Guantanamo" 
