--- a/localisation/replace/EUYL_victory_points_l_english.yml
+++ b/localisation/replace/EUYL_victory_points_l_english.yml
@@ -1119,7 +1119,13 @@
  VICTORY_POINTS_14249:0 "Parinari" #14249 - 491
 
  #NUEVOS VP - CUBA
- VICTORY_POINTS_7546:0 "Nuevitas" #315
+ VICTORY_POINTS_14625:0 "Pinar del Río"
+ VICTORY_POINTS_14619:0 "Nueva Gerona"
+ VICTORY_POINTS_7451:0 "Santa Clara"
+ VICTORY_POINTS_4476:0 "Camagüey"
+ VICTORY_POINTS_12347:0 "Holguín"
+ VICTORY_POINTS_1550:0 "Santiago de Cuba"
+ VICTORY_POINTS_7590:0 "Guantanamo"
 
  #NUEVOS VP - HAITI
  VICTORY_POINTS_14572:0 "Les Cayes" #318 
